--- a/public/signup.html
+++ b/public/signup.html
@@ -8,25 +8,22 @@
     <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-auth.js"></script>
     <script src="firebase-config.js"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="main.css">
   </head>
   <body class="text-center" cz-shortcut-listen="true">
     <form class="form-signin">
-      <img class="mb-4" src="../docs/logo.jpg" alt="" width="180" height="180">
-      <h1 class="h1 mb-3 font-weight-normal">GOOD SHARING</h1>
-      <input type="email" id="inputEmail" class="form-control sign-in-email" placeholder="Email" required="" autofocus="">
-      <input type="password" id="inputPassword" class="form-control sign-in-password" placeholder="Password" required="">
+      <img class="mb-4" src="../docs/logo.jpg" alt="" width="72" height="72">
+      <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+      <label for="inputEmail" class="sr-only">Email</label>
+      <input type="email" id="inputEmail" class="form-control sign-up-email" placeholder="Email" required="" autofocus="">
+      <label for="inputPassword" class="sr-only">Senha</label>
+      <input type="password" id="inputPassword" class="form-control sign-up-password" placeholder="Password" required="">
       <div class="checkbox mb-3">
       </div>
-      <button class="btn btn-lg btn-primary btn-block sign-in-button" type="submit">Entrar</button>
-    </form>
-    <form action="signup.html" method="post">
-      <p class="mt-5 mb-3 text-muted">Ainda não tem cadastro?</p>
-      <input class="btn btn-lg btn-primary btn-block" type="submit" value="Cadastrar">
+      <button class="btn btn-lg btn-primary btn-block sign-up-button" type="submit">Cadastrar</button>
     </form>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" crossorigin="anonymous"></script>
     <script src="index.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"crossorigin="anonymous"></script>
   </body>
 </html>
