--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-auth.js"></script>
     <script src="firebase-config.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="index.css">
   </head>
   <body class="text-center" cz-shortcut-listen="true">
     <form class="form-signin">
@@ -20,10 +20,8 @@
       <div class="checkbox mb-3">
       </div>
       <button class="btn btn-lg btn-primary btn-block sign-in-button" type="submit">Entrar</button>
-    </form>
-    <form action="signup.html" method="post">
       <p class="mt-5 mb-3 text-muted">Ainda não tem cadastro?</p>
-      <input class="btn btn-lg btn-primary btn-block" type="submit" value="Cadastrar">
+      <input class="btn btn-lg btn-primary btn-block" type="submit" value="Cadastrar" onclick="window.location = 'signup.html'">
     </form>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" crossorigin="anonymous"></script>
