botão voltar search.html

--- a/public/search.html
+++ b/public/search.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <header class="container-fluid mt-2 mb-3 d-flex flex-column">
-    <i class="fas fa-arrow-left fa-2x align-self-end"></i>
+    <i class="fas fa-arrow-left fa-lg align-self-end"></i>
     <nav class="d-flex justify-content-around align-items-center">
       <i class="fas fa-user-circle fa-5x"></i>
       <form class="d-flex">
