--- a/public/search.html
+++ b/public/search.html
@@ -31,10 +31,12 @@
         <h6>Nome</h6>
         <p>Tipo de perfil</p>
       </div>
-      <button type="button" class="btn btn-outline-light">+ Seguir</button>
+      <button id="btn-follow" type="button" class="btn btn-outline-light">+ Seguir</button>
     </section>
   </main>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
   <!-- Bootstrap -->
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <script src="search.js"></script>
 </body>
 </html>
