--- a/public/profile.html
+++ b/public/profile.html
@@ -6,17 +6,41 @@
     <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-database.js"></script>
     <script src="firebase-config.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" crossorigin="anonymous">
   </head>
   <body>
 
-    <div class="card" style="width: 18rem;">
-      <img class="card-img-top" src="..." alt="Card image cap">
+    <div class="card container mt-5" style="width: 20rem;">
+      <img class="card-img-top" src="../images/avatar_man.png" alt="Card image cap">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <form>
+          <div class="form-group">
+            <label for="exampleFormControlInput1">Nome</label>
+            <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Escreva seu Nome">
+          </div>
+          <div class="form-group">
+            <label for="exampleFormControlInput1">Email</label>
+            <input type="email" class="form-control" id="exampleFormControlInput2" placeholder="name@example.com">
+          </div>
+          <div class="form-group">
+            <label for="exampleFormControlSelect1">Tipo de perfil</label>
+            <select class="form-control" id="exampleFormControlSelect1">
+              <option selected>Selecione uma opção</option>
+              <option>Pessoa</option>
+              <option>Instituição</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="exampleFormControlTextarea1">Perfil</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Descreva seu perfil" rows="10"></textarea>
+          </div>
+        </form>
+        <a href="#" class="btn btn-primary">Salvar</a>
       </div>
     </div>
+
+
+
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="profile.js"></script>
