--- a/public/signup.html
+++ b/public/signup.html
@@ -8,11 +8,13 @@
     <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-auth.js"></script>
     <script src="firebase-config.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="index.css">
   </head>
   <body class="text-center" cz-shortcut-listen="true">
     <form class="form-signin">
-      <img class="mb-4" src="../docs/logo.jpg" alt="" width="72" height="72">
-      <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+      <img class="mb-4" src="../docs/logo.jpg" alt="" width="180" height="180">
+      <h1 class="h3 mb-3 font-weight-normal">Efetue seu cadastro</h1>
       <label for="inputEmail" class="sr-only">Email</label>
       <input type="email" id="inputEmail" class="form-control sign-up-email" placeholder="Email" required="" autofocus="">
       <label for="inputPassword" class="sr-only">Senha</label>
@@ -24,6 +26,5 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" crossorigin="anonymous"></script>
     <script src="index.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"crossorigin="anonymous"></script>
   </body>
 </html>
