--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
   </head>
   <body class="text-center" cz-shortcut-listen="true">
     <form class="form-signin">
-      <img class="mb-4" src="../docs/logo.jpg" alt="" width="180" height="180">
-      <h1 class="h1 mb-3 font-weight-normal">GOOD SHARING</h1>
+      <img class="mb-4" src="../docs/logo.jpg" alt="" width="200" height="200">
+      <h2 class="h2 mb-3 font-weight-bold">#GOOD SHARING#</h2>
       <input type="email" id="inputEmail" class="form-control sign-in-email" placeholder="Email" required="" autofocus="">
       <input type="password" id="inputPassword" class="form-control sign-in-password" placeholder="Password" required="">
       <div class="checkbox mb-3">
