--- a/public/posts.html
+++ b/public/posts.html
@@ -6,12 +6,13 @@
     <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-database.js"></script>
     <script src="firebase-config.js"></script>
+    <link rel="stylesheet" href="posts.css">
   </head>
   <body>
     <h1>POSTS</h1>
     <form>
       <textarea id="textPub" placeholder="No que estou pensando?" required></textarea>
-      <button type="submit" id="publish">Tweetar</button><br>
+      <button type="submit" id="publish">Postar</button><br>
       <div id="msg"></div>
     </form>
 
