--- a/public/profile.html
+++ b/public/profile.html
@@ -10,8 +10,8 @@
   </head>
   <body>
 
-    <div class="card container mt-5" style="width: 20rem;">
-      <img class="card-img-top" src="../images/avatar_man.png" alt="Card image cap">
+    <div class="card container mt-5" style="width: 30rem;">
+      <img class="card-img-top" src="../images/avatar_man.png" alt="Card image cap" width="100">
       <div class="card-body">
         <form>
           <div class="form-group">
