--- a/public/posts.html
+++ b/public/posts.html
@@ -10,11 +10,18 @@
     <link rel="stylesheet" href="posts.css">
   </head>
   <body>
-    <h1>POSTS</h1>
-    <form>
-      <textarea id="textPub" placeholder="No que estou pensando?" required></textarea>
+    <h1 class="ml-3">POSTS</h1>
+    <form class="ml-3">
+      <textarea id="textPub" placeholder="O que estou fazendo para mudar o mundo?" required></textarea>
       <button type="submit" id="publish">Postar</button><br>
-      <div id="msg"></div>
+      <div id="msg">
+        <select id="visualization">
+          <option value="private">Privado</option>
+          <option value="friends">Amigos</option>
+          <option value="public">Público</option>
+        </select>
+      </div>
+
     </form>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
