--- a/public/signup.html
+++ b/public/signup.html
@@ -16,8 +16,10 @@
     <form class="form-signin">
       <img class="mb-4" src="../docs/logo.jpg" alt="" width="200" height="200">
       <h1 class="h3 mb-3 font-weight-normal">Efetue seu cadastro</h1>
+      <label for="inputName" class="sr-only">Nome</label>
+      <input type="text" id="inputName" class="form-control sign-up-name" placeholder="Nome" autofocus="">
       <label for="inputEmail" class="sr-only">Email</label>
-      <input type="email" id="inputEmail" class="form-control sign-up-email" placeholder="Email" required="" autofocus="">
+      <input type="email" id="inputEmail" class="form-control sign-up-email" placeholder="Email" required="">
       <label for="inputPassword" class="sr-only">Senha</label>
       <input type="password" id="inputPassword" class="form-control sign-up-password" placeholder="Password" required="">
       <div class="checkbox mb-3">
