--- a/public/posts.html
+++ b/public/posts.html
@@ -8,6 +8,8 @@
     <script src="firebase-config.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="posts.css">
+    <!-- ícones -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
   </head>
   <body>
     <h1>POSTS</h1>
@@ -17,6 +19,13 @@
       <div id="msg"></div>
     </form>
 
+    <!-- Campo de busca -->
+    <div class="d-flex mb-3">
+      <input type="text" id="input-search" class="form-control col-10" placeholder="Buscar">        
+      <div class="input-group-append">
+        <button id="btn-search" class="btn btn-outline-light" type="button"><i class="fas fa-search"></i></button>
+      </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="posts.js"></script>
   </body>
