--- a/public/search.html
+++ b/public/search.html
@@ -5,6 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Good sharing - Pesquisar</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-database.js"></script>
+  <script src="firebase-config.js"></script>
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" media="screen" href="search.css" />
@@ -24,16 +29,7 @@
       </form>
     </nav>
   </header>
-  <main class="p-5">
-    <section class="item-search mb-5 d-flex justify-content-around align-items-center">
-      <i class="fas fa-user-circle fa-3x"></i>
-      <div>
-        <h6>Nome</h6>
-        <p>Tipo de perfil</p>
-      </div>
-      <button id="btn-follow" type="button" class="btn btn-outline-light">+ Seguir</button>
-    </section>
-  </main>
+  <main class="p-5"></main>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
   <!-- Bootstrap -->
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
