visualizaçao do perfil quando clica na foto

--- a/public/posts.html
+++ b/public/posts.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="container-fluid">
-      <a href="profile.html"><img class="img-thumbnail rounded-circle" src="../images/profile_default.png" alt="" width="100" height="100"></a><br>
+      <a id="profile-view" href=""><img class="img-thumbnail rounded-circle" src="../images/profile_default.png" alt="" width="100" height="100"></a><br>
       <a href="index.html" class="ml-3"><input id="logout" type="submit" value="Logout"></a>
     </div>
     <div class="container" id="posts">
