--- a/public/posts.html
+++ b/public/posts.html
@@ -5,6 +5,7 @@
     <title></title>
     <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-storage.js"></script>
     <script src="firebase-config.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="posts.css">
@@ -34,7 +35,7 @@
 
     <!-- Campo de busca -->
     <div class="d-flex mb-3">
-      <input type="text" id="input-search" class="form-control col-10" placeholder="Buscar">        
+      <input type="text" id="input-search" class="form-control col-10" placeholder="Buscar">
       <div class="input-group-append">
         <button id="btn-search" class="btn btn-outline-light" type="button"><i class="fas fa-search"></i></button>
       </div>
