ajustes de css e js

--- a/public/index.html
+++ b/public/index.html
@@ -13,16 +13,16 @@
     <link rel="stylesheet" href="index.css">
   </head>
   <body class="text-center" cz-shortcut-listen="true">
-    <form class="form-signin">
+    <form class="form-signin d-flex flex-column align-items-center">
       <img class="mb-4" src="../docs/logo.jpg" alt="" width="200" height="200">
       <h2 class="h2 mb-3 font-weight-bold">#GOOD SHARING#</h2>
-      <input type="email" id="inputEmail" class="form-control sign-in-email" placeholder="Email" required="" autofocus="">
+      <input type="email" id="inputEmail" class="form-control sign-in-email mb-2" placeholder="Email" required="" autofocus="">
       <input type="password" id="inputPassword" class="form-control sign-in-password" placeholder="Password" required="">
       <div class="checkbox mb-3">
       </div>
-      <button class="btn btn-lg btn-primary btn-block sign-in-button" type="submit">Entrar</button>
+      <button class="btn btn-lg btn-dark btn-block sign-in-button col-5" type="submit">Entrar</button>
       <p class="mt-5 mb-3 text-muted">Ainda não tem cadastro?</p>
-      <input class="btn btn-lg btn-primary btn-block" type="submit" value="Cadastrar" onclick="window.location = 'signup.html'">
+      <input class="btn btn-lg sign-up-button text-white btn-block col-5" type="submit" value="Cadastrar" onclick="window.location = 'signup.html'">
     </form>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" crossorigin="anonymous"></script>
