--- a/public/search.html
+++ b/public/search.html
@@ -22,7 +22,7 @@
     <nav class="d-flex justify-content-around align-items-center">
       <i class="fas fa-user-circle fa-5x"></i>
       <form class="d-flex">
-        <input type="text" id="input-search" class="form-control col-10" placeholder="Buscar">        
+        <input type="text" id="input-search" class="form-control col-11" placeholder="Buscar amigos ou instituições">        
         <div class="input-group-append">
           <button id="btn-search" class="btn btn-outline-light" type="button"><i class="fas fa-search"></i></button>
         </div>
