--- a/public/signup.html
+++ b/public/signup.html
@@ -13,18 +13,20 @@
     <link rel="stylesheet" href="index.css">
   </head>
   <body class="text-center" cz-shortcut-listen="true">
-    <form class="form-signin">
+    <form class="form-signin d-flex flex-column align-items-center">
       <img class="mb-4" src="../docs/logo.jpg" alt="" width="200" height="200">
       <h1 class="h3 mb-3 font-weight-normal">Efetue seu cadastro</h1>
       <label for="inputName" class="sr-only">Nome</label>
-      <input type="text" id="inputName" class="form-control sign-up-name" placeholder="Nome" autofocus="">
+      <input type="text" id="inputName" class="form-control sign-up-name mb-2" placeholder="Nome" autofocus="">
       <label for="inputEmail" class="sr-only">Email</label>
-      <input type="email" id="inputEmail" class="form-control sign-up-email" placeholder="Email" required="">
+      <input type="email" id="inputEmail" class="form-control sign-up-email mb-2" placeholder="Email" required="">
       <label for="inputPassword" class="sr-only">Senha</label>
-      <input type="password" id="inputPassword" class="form-control sign-up-password" placeholder="Password" required="">
-      <div class="checkbox mb-3">
-      </div>
-      <button class="btn btn-lg btn-primary btn-block sign-up-button" type="submit">Cadastrar</button>
+      <input type="password" id="inputPassword" class="form-control sign-up-password mb-2" placeholder="Password" required="">
+      <select class="custom-select sign-up-type mb-4" id="inputGroupSelect02">
+        <option selected>Pessoa</option>
+        <option value="1">Instituição</option>
+      </select>
+      <button class="btn btn-lg btn-block sign-up-button text-white col-5" type="submit">Cadastrar</button>
     </form>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" crossorigin="anonymous"></script>
