correcao do bug editar post e ajustes css

--- a/public/posts.html
+++ b/public/posts.html
@@ -17,7 +17,7 @@
       <a id="profile-view" href=""><i class="fas fa-user-circle fa-5x mb-2"></i></a>
       <a href="index.html" class="ml-3"><input class="btn btn-outline-light" id="logout" type="submit" value="Logout"></a>
     </div>
-    <div class="container" id="posts">
+    <div class="container mb-4" id="posts">
       <form class="w-100 d-flex flex-column align-items-center">
         <textarea id="textPub" class="form-control mb-2" placeholder="O que estou fazendo para mudar o mundo?" required></textarea>
         <select class="custom-select col-6 mb-2" id="visualization">
@@ -28,7 +28,7 @@
         <button class="btn btn-outline-light mb-2" type="submit" id="publish">Postar</button><br>
         <input class="file-select mb-2" type="file" accept="image/*" id="photo">
         <button class="file-submit btn btn-outline-light mb-5">Postar Foto</button>
-        <div id="msg"></div>
+        <div id="msg" class="col-12"></div>
       </form>
     </div>
     <!-- Campo de busca -->
