--- a/public/profile.html
+++ b/public/profile.html
@@ -7,11 +7,12 @@
     <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-database.js"></script>
     <script src="firebase-config.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" media="screen" href="search.css" />
     <!-- ícones -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
   </head>
-  <body>
-
+  <body class="container-fluid d-flex flex-column align-items-center">
+    <i class="fas fa-arrow-left fa-lg mt-4 align-self-end"></i>
     <div class="card container mt-5 d-flex flex-column align-items-center">
       <img class="card-img-top" src="../images/avatar_man.png" alt="Card image cap" width="100">
       <div class="card-body">
