--- a/public/posts.html
+++ b/public/posts.html
@@ -27,13 +27,13 @@
         </select>
         <button class="btn btn-outline-light mb-2" type="submit" id="publish">Postar</button><br>
         <input class="file-select mb-2" type="file" accept="image/*" id="photo">
-        <button class="file-submit btn btn-outline-light mb-5">Postar Foto</button>
+        <button class="file-submit btn btn-outline-light mb-5" id="postPhoto">Postar Foto</button>
         <div id="msg"></div>
       </form>
     </div>
     <!-- Campo de busca -->
     <div class="d-flex w-75 mt-5 mb-3">
-      <input type="text" id="input-search" class="form-control" placeholder="Buscar amigos ou instituições">        
+      <input type="text" id="input-search" class="form-control" placeholder="Buscar amigos ou instituições">
       <div class="input-group-append">
         <button id="btn-search" class="btn btn-outline-light" type="button"><i class="fas fa-search"></i></button>
       </div>
