--- a/public/posts.html
+++ b/public/posts.html
@@ -28,7 +28,9 @@
         <button class="btn btn-outline-light mb-2" type="submit" id="publish">Postar</button><br>
         <input class="file-select mb-2" type="file" accept="image/*" id="photo">
         <button class="file-submit btn btn-outline-light mb-5" id="postPhoto">Postar Foto</button>
-        <div id="msg" class="col-12"></div>
+        <div id="msg" class="col-12">
+          <img id="publishPhoto" src="" alt="" height=200 width=100>
+        </div>
       </form>
     </div>
     <!-- Campo de busca -->
