--- a/public/posts.html
+++ b/public/posts.html
@@ -20,7 +20,7 @@
     <div class="container mb-4" id="posts">
       <form class="w-100 d-flex flex-column align-items-center">
         <textarea id="textPub" class="form-control mb-2" placeholder="O que estou fazendo para mudar o mundo?" required></textarea>
-        <select class="custom-select col-6 mb-2" id="visualization">
+        <select class="custom-select align-self-end col-4 mb-2" id="visualization">
           <option value="private" selected>Privado</option>
           <option value="friends">Amigos</option>
           <option value="public">Público</option>
@@ -28,6 +28,13 @@
         <button class="btn btn-outline-light mb-2" type="submit" id="publish">Postar</button><br>
         <input class="file-select mb-2" type="file" accept="image/*" id="photo">
         <button class="file-submit btn btn-outline-light mb-5"  id="postPhoto">Postar Foto</button>
+        <!-- Filtro newsfeed -->
+        <div id="newsfeed-filter" class="mb-4">
+          <input type="radio" name="filter" value="all">Todos</input>
+          <input type="radio" name="filter" value="friends">Amigos</input>
+          <input type="radio" name="filter" value="private">Privado</input>
+        </div>
+        <!-- Posts -->
         <div id="msg" class="col-12"></div>
       </form>
     </div>
