--- a/public/profile.html
+++ b/public/profile.html
@@ -14,7 +14,7 @@
   <body class="container-fluid d-flex flex-column align-items-center">
     <i class="fas fa-arrow-left fa-lg mt-4 align-self-end"></i>
     <div class="card container mt-5 d-flex flex-column align-items-center">
-      <img class="card-img-top" src="../images/avatar_man.png" alt="Card image cap" width="100">
+      <!-- <img class="card-img-top" src="../images/avatar_man.png" alt="Card image cap" width="100">
       <div class="card-body">
         <form>
           <div class="form-group">
@@ -39,9 +39,9 @@
           </div>
         </form>
         <a href="#" class="btn btn-primary">Salvar</a>
-      </div>
+      </div> -->
     </div>
-
+    <div id="msg" class="col-12 mt-4"></div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="profile.js"></script>
   </body>
