--- a/public/posts.html
+++ b/public/posts.html
@@ -36,6 +36,7 @@
         </div>
         <!-- Posts -->
         <div id="msg" class="col-12"></div>
+        <img src="" height="400" alt="">
       </form>
     </div>
     <!-- Campo de busca -->
