--- a/public/profile.html
+++ b/public/profile.html
@@ -5,6 +5,7 @@
     <title></title>
     <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-storage.js"></script>
     <script src="firebase-config.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="search.css" />
@@ -13,35 +14,9 @@
   </head>
   <body class="container-fluid d-flex flex-column align-items-center">
     <i class="fas fa-arrow-left fa-lg mt-4 align-self-end"></i>
-    <div class="card container mt-5 d-flex flex-column align-items-center">
-      <!-- <img class="card-img-top" src="../images/avatar_man.png" alt="Card image cap" width="100">
-      <div class="card-body">
-        <form>
-          <div class="form-group">
-            <label for="exampleFormControlInput1">Nome</label>
-            <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Escreva seu Nome">
-          </div>
-          <div class="form-group">
-            <label for="exampleFormControlInput1">Email</label>
-            <input type="email" class="form-control" id="exampleFormControlInput2" placeholder="name@example.com">
-          </div>
-          <div class="form-group">
-            <label for="exampleFormControlSelect1">Tipo de perfil</label>
-            <select class="form-control" id="exampleFormControlSelect1">
-              <option selected>Selecione uma opção</option>
-              <option>Pessoa</option>
-              <option>Instituição</option>
-            </select>
-          </div>
-          <div class="form-group">
-            <label for="exampleFormControlTextarea1">Perfil</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Descreva seu perfil" rows="10"></textarea>
-          </div>
-        </form>
-        <a href="#" class="btn btn-primary">Salvar</a>
-      </div> -->
-    </div>
-    <div id="msg" class="col-12 mt-4"></div>
+    <div class="card container mt-5 d-flex flex-column align-items-center"></div>
+    <div id="msg" class="col-12 mt-4 card flex-md mb-4 shadow-sm h-md-250"></div>
+    <img id="photo-storage" src="" height="400" alt="">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="profile.js"></script>
   </body>
