alteracoes de design e css

--- a/public/posts.html
+++ b/public/posts.html
@@ -14,24 +14,30 @@
   </head>
   <body class="container-fluid d-flex flex-column align-items-center">
     <div class="container d-flex justify-content-between align-items-center rounded shadow-sm bg-verde mt-2 mb-4">
-      <div>
-        <a id="profile-view" href=""><i class="fas fa-user-circle fa-5x mb-2"></i></a>
-        <h4 id="user-name"></h4>
-        <p id="user-email"></p>
+      <div class="d-flex align-items-center">
+        <a id="profile-view" href=""><i class="fas fa-user-circle fa-4x mr-2"></i></a>
+        <p class="text-white" id="user-name"></p>
       </div>
       <a href="index.html" class="ml-3"><input class="btn btn-outline-light" id="logout" type="submit" value="Logout"></a>
     </div>
     <div class="container mb-4" id="posts">
       <form class="w-100 d-flex flex-column align-items-center">
-        <textarea id="textPub" class="form-control mb-2" placeholder="O que estou fazendo para mudar o mundo?" required></textarea>
-        <select class="custom-select align-self-end col-3 mb-2" id="visualization">
-          <option value="private" selected>Privado</option>
-          <option value="friends">Amigos</option>
-          <option value="public">Público</option>
-        </select>
-        <button class="btn btn-outline-light mb-2" type="submit" id="publish">Postar</button><br>
-        <input class="file-select mb-2" type="file" accept="image/*" id="photo">
-        <button class="file-submit btn btn-outline-light mb-5"  id="postPhoto">Postar Foto</button>
+        <div class="input-group mb-2 justify-content-center">
+          <textarea id="textPub" class="form-control col-9" placeholder="O que estou fazendo para mudar o mundo?" required></textarea>
+          <div class="d-flex flex-column col-1 p-0">
+            <select class="custom-select w-25 mb-1" id="visualization">
+              <option value="friends" selected>Amigos</option>
+              <option value="private">Privado</option>
+              <option value="public">Público</option>
+            </select>
+            <label for="file-select" class="mb-0"><i class="fas fa-camera fa-2x"></i></label>
+            <input id="file-select" type="file" accept="image/*" id="photo">
+          </div>
+        </div>
+        <div class="w-100 pr-5 d-flex justify-content-end mb-3 pb-4 border-bottom border-verde">
+          <button class="btn btn-outline-light mr-2" type="submit" id="publish">Postar</button><br>
+          <button class="btn btn-outline-light"  id="postPhoto">Postar Foto</button>
+        </div>
         <!-- Filtro newsfeed -->
         <div id="newsfeed-filter" class="mb-4">
           <input type="radio" name="filter" value="all" checked="checked">Todos</input>
@@ -39,7 +45,7 @@
           <input type="radio" name="filter" value="private">Privado</input>
         </div>
         <!-- Posts -->
-        <div id="msg" class="col-12 p-3 bg-verde-claro rounded shadow-sm"></div>
+        <div id="msg" class="col-12 p-3 bg-white rounded shadow-sm"></div>
       </form>
     </div>
     <!-- Campo de busca -->
