--- a/public/profile.html
+++ b/public/profile.html
@@ -13,35 +13,9 @@
   </head>
   <body class="container-fluid d-flex flex-column align-items-center">
     <i class="fas fa-arrow-left fa-lg mt-4 align-self-end"></i>
-    <div class="card container mt-5 d-flex flex-column align-items-center">
-      <!-- <img class="card-img-top" src="../images/avatar_man.png" alt="Card image cap" width="100">
-      <div class="card-body">
-        <form>
-          <div class="form-group">
-            <label for="exampleFormControlInput1">Nome</label>
-            <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Escreva seu Nome">
-          </div>
-          <div class="form-group">
-            <label for="exampleFormControlInput1">Email</label>
-            <input type="email" class="form-control" id="exampleFormControlInput2" placeholder="name@example.com">
-          </div>
-          <div class="form-group">
-            <label for="exampleFormControlSelect1">Tipo de perfil</label>
-            <select class="form-control" id="exampleFormControlSelect1">
-              <option selected>Selecione uma opção</option>
-              <option>Pessoa</option>
-              <option>Instituição</option>
-            </select>
-          </div>
-          <div class="form-group">
-            <label for="exampleFormControlTextarea1">Perfil</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Descreva seu perfil" rows="10"></textarea>
-          </div>
-        </form>
-        <a href="#" class="btn btn-primary">Salvar</a>
-      </div> -->
+    <div class="card container mt-3 mb-3 text-white d-flex flex-column align-items-center">
     </div>
-    <div id="msg" class="col-12 mt-4"></div>
+    <div id="msg" class="col-12 p-3 bg-white rounded shadow-sm"></div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="profile.js"></script>
   </body>
