--- a/public/search.html
+++ b/public/search.html
@@ -28,7 +28,7 @@
       </form>
     </nav>
   </header>
-  <main class="p-5"></main>
+  <main class="p-4 d-flex flex-column align-items-center"></main>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
   <!-- Bootstrap -->
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
