avatar da pagina de busca direcionando para pagina de perfil

--- a/public/search.html
+++ b/public/search.html
@@ -19,9 +19,9 @@
   <header class="container-fluid mt-2 mb-3 d-flex flex-column">
     <i class="fas fa-arrow-left fa-lg align-self-end"></i>
     <nav class="d-flex justify-content-around align-items-center">
-      <i class="fas fa-user-circle fa-5x"></i>
-      <form class="d-flex">
-        <input type="text" id="input-search" class="form-control col-11" placeholder="Buscar amigos ou instituições">
+      <i id="profile-view" class="fas fa-user-circle fa-5x"></i>
+      <form class="d-flex col-9">
+        <input type="text" id="input-search" class="form-control" placeholder="Buscar amigos ou instituições">
         <div class="input-group-append">
           <button id="btn-search" class="btn btn-outline-light" type="button"><i class="fas fa-search"></i></button>
         </div>
