--- a/public/posts.html
+++ b/public/posts.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
   </head>
   <body class="container-fluid d-flex flex-column align-items-center">
-    <div class="container d-flex justify-content-between align-items-center rounded shadow-sm bg-verde mt-2 mb-4">
+    <div class="container d-flex justify-content-between align-items-center rounded shadow-sm bg-verde mt-2 mb-4" style="height: 80px;">
       <div class="d-flex align-items-center">
         <a id="profile-view" href=""><i class="fas fa-user-circle fa-4x mr-2"></i></a>
         <p class="text-white" id="user-name"></p>
@@ -23,7 +23,7 @@
     <div class="container mb-4" id="posts">
       <form class="w-100 d-flex flex-column align-items-center">
         <div class="input-group mb-2 justify-content-center">
-          <textarea id="textPub" class="form-control col-9" placeholder="O que estou fazendo para mudar o mundo?" required></textarea>
+          <textarea id="textPub" class="form-control col-9 mr-2" placeholder="O que estou fazendo para mudar o mundo?" required></textarea>
           <div class="d-flex flex-column col-1 p-0">
             <select class="custom-select w-25 mb-1" id="visualization">
               <option value="friends" selected>Amigos</option>
