--- a/public/profile.html
+++ b/public/profile.html
@@ -17,6 +17,7 @@
     <div class="card container mt-3 mb-3 text-white d-flex flex-column align-items-center">
     </div>
     <div id="msg" class="col-12 p-3 bg-white rounded shadow-sm"></div>
+    <img id="photo-storage" src="" alt="">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="profile.js"></script>
   </body>
