--- a/public/signup.html
+++ b/public/signup.html
@@ -23,8 +23,8 @@
       <label for="inputPassword" class="sr-only">Senha</label>
       <input type="password" id="inputPassword" class="form-control sign-up-password mb-2" placeholder="Password" required="">
       <select class="custom-select sign-up-type mb-4" id="inputGroupSelect02">
-        <option selected>Pessoa</option>
-        <option value="1">Instituição</option>
+        <option value="1">Pessoa</option>
+        <option value="2">Instituição</option>
       </select>
       <button class="btn btn-lg btn-block sign-up-button text-white col-5" type="submit">Cadastrar</button>
     </form>
