--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body class="text-center" cz-shortcut-listen="true">
     <form class="form-signin d-flex flex-column align-items-center">
-      <img class="mb-4" src="../docs/logo.jpg" alt="" width="200" height="200">
+      <img class="mb-4" src="docs/logo.jpg" alt="" width="200" height="200">
       <h2 class="h2 mb-3 font-weight-bold">#GOOD SHARING#</h2>
       <input type="email" id="inputEmail" class="form-control sign-in-email mb-2" placeholder="Email" required="" autofocus="">
       <input type="password" id="inputPassword" class="form-control sign-in-password" placeholder="Password" required="">
